# erpnext-archiver

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
erpnext_archiver/: __init__.py  api.py  hooks.py  modules.txt
erpnext_archiver/config/: desktop.py
erpnext_archiver/engine/: archiver.py  restore.py  schema_manager.py
erpnext_archiver/erpnext_archiver/: __init__.py
erpnext_archiver/erpnext_archiver/doctype/archive_doctype_row/: archive_doctype_row.json  archive_doctype_row.py
erpnext_archiver/erpnext_archiver/doctype/archive_log/: archive_log.json  archive_log.py
erpnext_archiver/erpnext_archiver/doctype/archive_settings/: archive_settings.js  archive_settings.json  archive_settings.py
erpnext_archiver/overrides/: financial_reports.py
erpnext_archiver/public/js/: archive_button.js  listview_defaults.js
